--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,10 @@
+@import "~bootstrap/scss/bootstrap";
+
 html, body {
   height: 100%;
   width: 100%;
 }
+
 #root {
   height: 100%;
   min-height: 100%;
@@ -12,14 +15,14 @@ html, body {
 $primary-color: #0b2343;
 $secundary-color: #377DC2;
 
-
-
 .header {
   background-color: $primary-color;
 }
+
 .section_search {
   background-color: $secundary-color;
 }
+
 .radio-input {
   height: 1.3rem;
   width:  1.3rem;
@@ -27,13 +30,16 @@ $secundary-color: #377DC2;
   background-color: initial;
   border-color: #fff;
 }
+
 .form-check-input:checked {
   background-color: $secundary-color !important;
   border-color: $secundary-color;
 }
+
 .btn-switch {
   border: none;
 }
+
 .switch {
   background-color: transparent;
   color:rgba($color: #fff, $alpha: 0.1);
@@ -50,6 +56,7 @@ $secundary-color: #377DC2;
   border-radius: 0;
   height: 3rem;
 }
+
 .buttonSearch {
   background-color: $primary-color;
   border-radius: 40px;
@@ -63,6 +70,7 @@ $secundary-color: #377DC2;
     color: #fff
   }
 }
+
 .buttonSearchDisable {
   background-color: transparent;
   border: solid 1px rgba($color: #fff, $alpha: 0.5);
